; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_packet_factory.c_make_ble_write_suggested_default_data_length.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_packet_factory.c_make_ble_write_suggested_default_data_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCI_BLE_WRITE_DEFAULT_DATA_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32)* @make_ble_write_suggested_default_data_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @make_ble_write_suggested_default_data_length(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 8, i32* %6, align 4
  %8 = load i32, i32* @HCI_BLE_WRITE_DEFAULT_DATA_LENGTH, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32* @make_command(i32 %8, i32 %9, i32** %5)
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @UINT16_TO_STREAM(i32* %11, i32 %12)
  %14 = load i32*, i32** %5, align 8
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @UINT16_TO_STREAM(i32* %14, i32 %15)
  %17 = load i32*, i32** %7, align 8
  ret i32* %17
}

declare dso_local i32* @make_command(i32, i32, i32**) #1

declare dso_local i32 @UINT16_TO_STREAM(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
